--- a/lesson_1/Homework1.ipynb
+++ b/lesson_1/Homework1.ipynb
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 23,
       "metadata": {
         "id": "aJVPKJLp6VjR"
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 24,
       "metadata": {
         "scrolled": true,
         "colab": {
@@ -39,18 +39,18 @@
           "height": 852
         },
         "id": "JPEpmFjf6VjS",
-        "outputId": "5a8cac91-12de-418b-fa26-1afe21f36b6f"
+        "outputId": "fa033f4a-1b92-4728-c270-9c9f531696c1"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f93e3733250>"
+              "<matplotlib.image.AxesImage at 0x7f93e35f7100>"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 24
         },
         {
           "output_type": "display_data",
@@ -65,7 +65,7 @@
       ],
       "source": [
         "# Load an image (you can freely chose any image you like)\n",
-        "img =cv2.imread('/content/data/cat.jpg')\n",
+        "img =cv2.imread('cat.jpg')\n",
         "# Convert it to RGB\n",
         "img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
         "# Plot it\n",
@@ -92,14 +92,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 824
         },
         "id": "DVkf61W66VjS",
-        "outputId": "d7e597fa-40a9-4a92-c1c0-3dc69ed9bfe1"
+        "outputId": "be54b16a-09cd-46d6-d9d2-25536683a28c"
       },
       "outputs": [
         {
@@ -110,7 +110,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 25
         },
         {
           "output_type": "display_data",
