--- a/lesson_4/homework/Homework.ipynb
+++ b/lesson_4/homework/Homework.ipynb
@@ -222,17 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Filter out all lines that are approximately horizontal (+/- 20 degrees). \n",
     "filtered_lines = []\n",
@@ -385,6 +377,13 @@
     "\n",
     "plt.subplot(121), plt.imshow(edges, cmap='gray'), plt.title('Edge map')\n",
     "plt.subplot(122), plt.imshow(result, cmap='gray'), plt.title('Hough lines')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I think I have done something wrong. Final result has not changed after KMeans clustering. There was a warning about n_init because I used latest version of library. Or it could be that I have incorrectly filtered lines in previous steps."
    ]
   },
   {
