--- a/lesson_2/Homework.ipynb
+++ b/lesson_2/Homework.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {
     "id": "C3-1T_YrEXTx"
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -46,10 +46,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x204c0ef2650>"
+       "<matplotlib.image.AxesImage at 0x2d3c2cd1010>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -93,12 +93,19 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.01190476 1.05371901 2.00787402]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(<Axes: >, <matplotlib.image.AxesImage at 0x204c16eae90>)"
+       "(<Axes: >, <matplotlib.image.AxesImage at 0x2d3d0399010>)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -119,12 +126,15 @@
     "white = img[row, col, :]\n",
     "coeffs = 255.0/white\n",
     "\n",
+    "print(coeffs)\n",
+    "\n",
     "# Apply white balancing and generate balanced image\n",
     "balanced = np.zeros_like(img, dtype=np.float32)\n",
     "for channel in range(3):\n",
     "    balanced[..., channel] = img[..., channel] * coeffs[channel]\n",
     "\n",
     "# White patching does not guarantee that the dynamic range is preserved, images must be clipped.\n",
+    "\n",
     "balanced = balanced/255\n",
     "balanced[balanced > 1] = 1\n",
     "\n",
@@ -144,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -157,10 +167,10 @@
     {
      "data": {
       "text/plain": [
-       "(<Axes: >, <matplotlib.image.AxesImage at 0x204c184b3d0>)"
+       "(<Axes: >, <matplotlib.image.AxesImage at 0x2d385a99010>)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -226,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -239,10 +249,10 @@
     {
      "data": {
       "text/plain": [
-       "(<Axes: >, <matplotlib.image.AxesImage at 0x204c18c8e50>)"
+       "(<Axes: >, <matplotlib.image.AxesImage at 0x2d3c26d6650>)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
